# lapis

./: .gitignore  CHANGELOG.md  Lapis.lean  Main.lean  README.md  example.lean  generate.py  lake-manifest.json  lakefile.toml  test_server.lean
.github/workflows/: docs.yml  lean_action_ci.yml
Lapis/: Concurrent.lean  VFS.lean
Lapis/Concurrent/: Actor.lean  Channel.lean  Dispatcher.lean  LspActor.lean  VfsActor.lean
Lapis/Protocol/: Capabilities.lean  Generated.lean  JsonRpc.lean  Messages.lean  Types.lean
Lapis/Server/: Builder.lean  Diagnostics.lean  Dispatcher.lean  Documents.lean  Monad.lean  Progress.lean  Receiver.lean  Registration.lean  SemanticTokens.lean  WorkspaceEdit.lean
Lapis/Transport/: Base.lean  Stdio.lean
Lapis/VFS/: Document.lean  FingerTree.lean  LineIndex.lean  PieceTable.lean  Position.lean
test-client/: lapis-tests.cabal  pyproject.toml
test-client/test/: Main.hs
test-client/test/Test/: Completion.hs  DocumentSync.hs  Hover.hs  Initialization.hs
test-client/tests/: conftest.py  test_basic.py  test_debug.py  test_diagnostics.py  test_server_features.py  test_server_utils.py  test_stress.py  test_vfs.py
