[project]
name = "lapis-tests"
version = "0.1.0"
description = "Tests for Lapis LSP server"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0",
    "pytest-lsp>=0.4.0",
    "lsprotocol>=2023.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
